# projet-4

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  auto_DL.py  moyennage_data.py
0-template/: .gitignore  README.md  requirements.txt
0-template/data/: example_geotiff_1band.tif  map.geojson
0-template/docs/: instructions_jupyter.md
0-template/notebooks/tutorials/: image_download.ipynb  image_processing.ipynb
0-template/src/: main.py
0-template/src/input/: load.py
0-template/src/loading/: load.py  tiff.py
0-template/src/utilities/: utils_gdal.py
1-snow_hr/: README.md
2-snow_ts/: README.md
3-urban/: README.md
4-pollution/: README.md
4-pollution/code/: README.txt  cartes2.py  map_seul.py  traitement2.py
5-forest/: README.md
7-change_detection/: LOG.md  README.md
9-rs_video/: README.md
docs/: readme.txt
helpers/: read_img.ipynb  to_start.ipynb
helpers/data/: example_geotiff_ms.tif  example_matlab_workspace.mat
helpers/git/: instructions_git.md
projects/: .gitattributes
projects/2022_2023/: link.txt
projects/2024_2025/04_pollution/: pyproject.toml
projects/downloaders/earth_explorer/: earth_explorer_downloader.py  requirements.txt
projects/downloaders/huggingface/: downloader.py
projects/downloaders/sentinel/: download_sentinel_api.py
projects/subject/01_snow_hr/: pyproject.toml
projects/subject/02_snow_ts/: .gitignore  pyproject.toml
projects/subject/02_snow_ts/data/raw/: readme.txt
projects/subject/02_snow_ts/src/: data_loading.py
projects/subject/03_urban/: pyproject.toml
projects/subject/03_urban/src/: loading_data.py
projects/subject/04_pollution/: pyproject.toml
projects/subject/04_pollution/data/raw/: readme.txt
projects/subject/05_forest/: .gitignore  pyproject.toml
projects/subject/05_forest/data/raw/: readme.txt
projects/subject/05_forest/src/: loading_data.py
projects/subject/06_irradiance/: LOG.md  pyproject.toml
projects/subject/06_irradiance/dataset/: readme.txt
projects/subject/07_change_detection/: pyproject.toml
projects/subject/08_ship_detection/: README.md  pyproject.toml
projects/subject/08_ship_detection/data/: readme.txt
projects/subject/08_ship_detection/src/: loading_data.py
projects/subject/10_pansharpening/: README.md  pyproject.toml
projects/subject/10_pansharpening/data/raw/: readme.txt
projects/subject/10_pansharpening/src/: loading_data.py
projects/subject/11_deforestation/: README.md  pyproject.toml
projects/subject/1_snow_hs/: README.md
projects/subject/2_snow_ts/: README.md
projects/subject/3_urban/: README.md
projects/subject/4_pollution/: README.md
projects/subject/5_forest/: README.md
projects/subject/7_change_detection/: README.md
projects/subjects/01_snow_hr/: pyproject.toml
projects/subjects/02_snow_ts/: install.sh  pyproject.toml
projects/subjects/02_snow_ts/data/raw/: readme.txt
projects/subjects/02_snow_ts/src/: data_loading.py
projects/subjects/03_urban/: install.sh  pyproject.toml
projects/subjects/03_urban/data/raw/: readme.txt
projects/subjects/04_pollution/: install.sh  pyproject.toml
projects/subjects/04_pollution/data/raw/: readme.txt
projects/subjects/04_pollution/src/: AUTO_DL.py  data_loading.py  data_loading_14_05.py  data_loading_apc.py
projects/subjects/05_forest/: .gitignore  install.sh  pyproject.toml
projects/subjects/05_forest/data/raw/: readme.txt
projects/subjects/05_forest/src/: data_loading.py
projects/subjects/06_irradiance/: README.md  install.sh  pyproject.toml
projects/subjects/06_irradiance/data/raw/: readme.txt
projects/subjects/06_irradiance/src/: loading_data.py
projects/subjects/07_change_detection/: pyproject.toml
projects/subjects/08_ship_detection/: install.sh  pyproject.toml
projects/subjects/08_ship_detection/data/raw/: readme.txt
projects/subjects/08_ship_detection/src/: data_loading.py
projects/subjects/09_rs_video/: README.md  pyproject.toml
projects/subjects/10_pansharpening/: LOG.md  install.sh  pyproject.toml
projects/subjects/10_pansharpening/data/raw/: readme.txt
projects/subjects/10_pansharpening/src/: data_loading.py  loading_data.py
projects/subjects/11_deforestation/: pyproject.toml
projects/subjects/11_deforestation/data/raw/: readme.txt
projects/subjects/11_deforestation/src/: loading_data.py
projects/template/: README.md  pyproject.toml  requirements.txt
projects/template/data/: example_geotiff_1band.tif  example_geotiff_ms.tif
projects/template/docs/: instructions_git.md  instructions_jupyter.md
projects/template/notebooks/tutorials/: image_download.ipynb  image_processing.ipynb  image_reading.ipynb
projects/template/reports/2021_2022/: LOG.md
projects/template/src/loading/: copernicus_downloader.py  earth_explorer_downloader.py
src/: README.md  utils_gdal.py  utils_rasterio.py
src/template/: instructions_git.md  readme.md  requirements.txt
