[project]
name = "06-irradiance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.30.2",
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
