[project]
name = "02-snow-ts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.30.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
    "rasterio>=1.4.3",
    "scipy>=1.15.2",
    "tifffile>=2025.3.30",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
