[project]
name = "04-pollution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cartopy>=0.23.0",
    "h5netcdf>=1.6.1",
    "huggingface-hub>=0.30.2",
    "matplotlib>=3.9.4",
    "netcdf4>=1.7.2",
    "xarray>=2024.7.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
