[project]
name = "05-forest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.30.2",
    "matplotlib>=3.9.4",
    "numpy>=2.2.4",
    "tifffile>=2024.8.30",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
    "pandas>=2.2.3",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
