[project]
name = "08-ship-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.30.2",
    "imageio>=2.37.0",
    "matplotlib>=3.9.4",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
